--- a/css/source.css
+++ b/css/source.css
@@ -1226,3 +1226,14 @@ textarea {
     background: black;
     opacity: 0.5;
 }
+
+#app-mount .guilds-1SWlCJ .frame-oXWS21[class*=listItem] .button-Jt-tIg {
+    width: 100%;
+    height: 50% !important;
+    border-radius: 8px;
+    padding: 4px;
+    font-size: 11px;
+    box-sizing: border-box;
+    text-align: center;
+    background: var(--gradient);
+}
