--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 */
 
 /* Base - FrostedGlass By Gibbu ---> https://github.com/Gibbu */
-@import url("https://mimir-x.github.io/Obsidian/css/base.css");
+@import url("https://mimir-gxp.github.io/Obsidian/css/base.css");
 
 /* Extension */
 @import url("https://discordstyles.github.io/HorizontalServerList/dist/HorizontalServerList.css");
