--- a/Obsidian.theme.css
+++ b/Obsidian.theme.css
@@ -10,7 +10,7 @@
 */
 
 /*Import Obsidian Main */
-@import url("https://mimir-gxp.github.io/Obsidian/css/main.css");
+@import url("https://mimir-gxp.github.io/Obsidian/css/main-2.0.1.css");
 @import url("https://mimir-gxp.github.io/Obsidian/css/MacTitleBar.css");
 
 :root {
