--- a/css/main-2.0.2.css
+++ b/css/main-2.0.2.css
@@ -1925,7 +1925,7 @@ button.button-f2h6uQ.lookBlank-21BCro.colorBrand-I6CyqQ.sizeMin-DfpWCE.grow-2sR_
 /* Tchat voice channel */
 
 .container-3XgAHv {
-    background-color: none !important;
+    background-color: transparent !important;
 }
 
 /* Public text under server name */
