--- a/Obsidian.theme.css
+++ b/Obsidian.theme.css
@@ -1,6 +1,6 @@
 /**
 * @name Obsidian
-* @version 2.0.2
+* @version 3.0.0 Release
 * @description Obsidian Discord Theme.
 * @author ᛗᛁᛗᛁᚱ
 * @authorId 106097290640363520
@@ -10,7 +10,7 @@
 */
 
 /*Import Obsidian Main */
-@import url("https://mimir-gxp.github.io/Obsidian/css/main-2.0.2.css");
+@import url("https://mimir-gxp.github.io/Obsidian/css/main-3.0.0.css");
 @import url("https://mimir-gxp.github.io/Obsidian/css/MacTitleBar.css");
 
 :root {
